--- a/src/style.css
+++ b/src/style.css
@@ -24,6 +24,7 @@
 .slider__minBar,
 .slider__maxBar {
   position: absolute;
+  height: 10px;
   z-index: var(--barLayer);
   top: 50%;
   width: 0;
@@ -31,9 +32,20 @@
   background-color: #aaa;
 }
 
-.left { left: -10px; }
-.right { left: calc(100% - 10px); }
 
+
+[class*="bar"].left {
+  left: 0;
+}
+
+[class*="bar"].right {
+  right: 0;
+}
+
+
+
+.slider_toggle.left { left: -10px; }
+.slider_toggle.right { left: calc(100% - 10px); }
 .slider_toggle {
   position: absolute;
   z-index: 10;
